@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-    <title>Coverage report</title>
+    <title>{{ title|escape }}</title>
     <link rel='stylesheet' href='style.css' type='text/css'>
     {% if extra_css %}
         <link rel='stylesheet' href='{{ extra_css }}' type='text/css'>
@@ -19,7 +19,7 @@
 
 <div id='header'>
     <div class='content'>
-        <h1>Coverage report:
+        <h1>{{ title|escape }}:
             <span class='pc_cov'>{{totals.pc_covered_str}}%</span>
         </h1>
         <img id='keyboard_icon' src='keybd_closed.png'>
